Correct spelling of 'Sidhagodra' to 'godara'
thanks to panda🐼...

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
     DOB: "23-09-2008"
   },
   {
-    fullName: "Manisha Sidhagodra",
+    fullName: "Manisha godara",
     class: "12th Science PCMB",
     college: "Mahatma Gandhi Jr College, Wadsa",
     section: "A",
