--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MG Clg Students Info..</title>
+  <title>MG Clg Students Info....</title>
   <style>
   body {
     margin: 0;
